dnl init autoconf and automake
m4_include([version.m4])
AC_INIT([awds], MAJOR_VERSION_NUMBER.MINOR_VERSION_NUMBER)
AM_INIT_AUTOMAKE(1.7)

dnl CPPFLAGS=' -Werror -Wall'
#CXXFLAGS='-g -ggdb3 -Wall'
dnl CFLAGS='-g -ggdb3'

dnl we need a c++-compiler:
AC_PROG_CPP
AC_PROG_CXX

dnl we use libtool for libraries

dnl AC_DISABLE_STATIC
AC_LIBTOOL_DLOPEN
AC_PROG_LIBTOOL

AC_ARG_ENABLE(debug, [  --disable-debug          turn off debugging options],
if test "$enableval" != "no" ; then
        CXXFLAGS='-g -ggdb3 -O0 -Wall'
	CFLAGS='-g -ggdb3 -O0 -Wall'
fi)

dnl check for GEA library


dnl default values:
GEAINC="-I/usr/include"	
GEALIB="-L/usr/lib -lgea-posix"
GEALIBDIR="/usr/lib"

AC_MSG_CHECKING(for GEA)
AC_ARG_WITH(gea,
[  --with-gea=DIR	  use GEA in DIR],
[ case "$withval" in 
  yes|no)
	AC_MSG_RESULT(no)
	;;
  *)
	if test -f $withval/include/gea/API.h -a -f $withval/lib/libgea-posix.la; then
  	  AC_MSG_RESULT(from $withval)
	  GEAINC="-I$withval/include"
	  GEALIB="-L$withval/lib -lgea-posix"
	  GEALIBDIR="$withval/lib"
	else 
	  AC_ERROR(gea/API.h or libgea-posix.la not found in $withval)
	fi
	;;
  esac ],
[ if  test -f ${prefix}/include/gea/API.h -a -f ${prefix}/lib/libgea-posix.la; then
	  GEAINC="-I${prefix}/include"
	  GEALIB="-L${prefix}/lib -lgea-posix"
	  GEALIBDIR="${prefix}/lib"
	else 
	  AC_MSG_RESULT(no)
	  AC_ERROR(GEA not found)
  fi
  AC_MSG_RESULT(yes) ]
)
AC_SUBST(GEAINC)
AC_SUBST(GEALIB)
AC_SUBST(GEALIBDIR)

AC_ARG_ENABLE(mmx,
[  --enable-mmx    Turn on MMX accelerated AES implementation],
[case "${enableval}" in
    yes) 
	AC_CHECK_TOOL(NASM, nasm, AC_MSG_ERROR(Cannot find assembler nasm required for mmx support.) )
	aes_mmx=true 
	;;
    no)  aes_mmx=false ;;
    *) AC_MSG_ERROR(bad value ${enableval} for --enable-mmx) ;;
esac],[aes_mmx=false])
AM_CONDITIONAL(AES_MMX, test x$aes_mmx = xtrue)


AC_CONFIG_FILES([Makefile
 src/Makefile
 src/crypto/Makefile
 scripts/Makefile
])
AC_OUTPUT

